fix: nav logo cutting off on mobile

--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -1,28 +1,28 @@
 .logged-in-status {
- display: flex;
- justify-content: flex-end;
- background-color: teal;
+  display: flex;
+  justify-content: flex-end;
+  background-color: teal;
+  min-height: 10vh;
 }
 
 .logged-in-status-header {
   padding-right: 1rem;
-  color: white
+  color: white;
 }
 
 .header {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   text-align: center;
   background-color: teal;
-  min-height: 12vh;
+  min-height: 17vh;
 }
 
 .route-links {
   color: white;
   display: flex;
-  padding: 0.25rem;
+  padding: 0.55rem;
 }
 
 .link-container {
@@ -32,10 +32,9 @@
 }
 
 .brand-logo-image {
-  width: 100%;
   height: 70px;
-  object-fit: cover;
-  object-position: 50% 50%;
+  width: auto;
+  aspect-ratio: 13/9;
 }
 
 .main-social-container {
